# mofold-ziplog

./: Cargo.toml  LICENSE  README.md
crates/mofold-cli/: Cargo.toml
crates/mofold-cli/src/: agent.rs  main.rs  pmk.rs
crates/mofold-cli/src/commands/: batch_get.rs  decrypt.rs  delete.rs  encrypt.rs  init.rs  mod.rs  read.rs  rotate.rs  status.rs  tail.rs  voucher.rs
crates/mofold-core/: Cargo.toml
crates/mofold-core/benches/: crypto_bench.rs
crates/mofold-core/src/: coordinate.rs  crypto.rs  envelope.rs  error.rs  keys.rs  lib.rs  voucher.rs
crates/mofold-core/tests/: integration.rs
docs/: DEPLOYMENT.md  PROTOCOL.md  SECURITY.md
