[workspace]
members = ["crates/mofold-core", "crates/mofold-cli"]
resolver = "2"

[workspace.dependencies]
ring       = "0.17"
zeroize    = { version = "=1.7.0", features = ["derive"] }
base64     = "=0.21.7"
hex        = "0.4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "=1.35.1", features = ["full"] }
thiserror  = "=1.0.56"
anyhow     = "1"
clap       = { version = "=4.4.18", features = ["derive", "env"] }
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rustls       = { version = "=0.21.12" }
webpki-roots = "=0.25.4"
