[package]
name = "mofold-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ziplog"
path = "src/main.rs"

[dependencies]
mofold-core        = { path = "../mofold-core" }
ring               = { workspace = true }
zeroize            = { workspace = true }
base64             = { workspace = true }
hex                = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
clap               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tokio              = { workspace = true }
rustls       = { workspace = true }
webpki-roots = { workspace = true }
