[package]
name = "mofold-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ring       = { workspace = true }
zeroize    = { workspace = true }
base64     = { workspace = true }
hex        = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
aes        = "=0.8.4"
cbc  = { version = "=0.1.2", features = ["block-padding", "alloc"] }

# Benchmark entry — provides its own fn main(), no nightly needed.
# Run with: cargo bench -p mofold-core
[[bench]]
name    = "crypto_bench"
harness = false   # bench file provides fn main(); Cargo does not inject a harness
